<resources>
    <string name="app_name">Hoodies store</string>
    <string name="app_name2">Hoodies\nStore</string>
    <string name="helloagain">Hello Again!</string>
    <string name="welcomeback">Welcome Back You\'ve Been Missed</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Login</string>
    <string name="prodectname">Product</string>
    <string name="sizename">Size</string>
    <string name="price">$ 100</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity">1</string>
    <string name="free_delivery">FREE delivery</string>
    <string name="instock">Available in stock</string>
    <string name="about">Product Description</string>
    <string name="aboutproduct">Hii this is Product</string>
    <string name="entermail">Enter Emailid</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enterpincode">Enter Pin Code</string>
    <string name="totalprice">Total price</string>
    <string name="loding">Loading...</string>
    <string name="cod">COD</string>
    <string name="expirydate">Expiry Date</string>
    <string name="date">MMYY</string>
    <string name="cvv">CVV</string>
    <string name="proseedtopayment">Proceed to Payment</string>
    <string name="getStart">Get Start</string>
    <string name="hello">Hello</string>
    <string name="phone_number">Phone</string>
    <string name="address">Address</string>
    <string name="details">Details</string>
    <string name="rating">5</string>


    <string-array name="quantity_array">
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
            <item>8</item>
            <item>9</item>
            <item>10</item>
        </string-array>

</resources>