<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <!-- Background Arch -->
        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:id="@+id/frame_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Arch Shape -->
            <View
                android:id="@+id/arch_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/arch_background" />

            <!-- Product Image -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:paddingTop="20dp"

                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/hood" />
        </FrameLayout>

        <!-- Product Name -->
        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="VERTLUNE"
            android:textStyle="bold"
            android:fontFamily="@font/peralta"
            android:textColor="#4A4A4A"
            android:layout_margin="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frame_layout"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Product Description -->
        <TextView
            android:id="@+id/size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sizename"
            android:textColor="#8A8A8A"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@+id/product_name"
            app:layout_constraintStart_toStartOf="@+id/product_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Price -->
        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="#4A4A4A"
            android:fontFamily="@font/peralta"

            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/size"
            app:layout_constraintStart_toStartOf="@+id/product_name" />

        <!-- Quantity -->




        <LinearLayout
            android:id="@+id/quantity_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/product_price"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/decrease_button"
                android:layout_width="40dp"

                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:text="@string/minus"
                android:src="@drawable/minus"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/quantity"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/increase_button"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:src="@drawable/plus"
                android:text="@string/plus"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
