
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp"
app:cardCornerRadius="12dp"
app:cardElevation="4dp"
android:background="@color/white">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/product_details"
        android:layout_marginEnd="12dp" />

    <!-- Product Details -->
    <LinearLayout
        android:id="@+id/product_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/product_image"
        app:layout_constraintEnd_toStartOf="@id/product_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp">

        <!-- Product Name -->
        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:fontFamily="@font/inter"
            android:text="@string/prodectname"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />



        <!-- Price -->
        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_delivery"
            android:textSize="10sp"
            android:fontFamily="@font/inter"
            android:textColor="@color/hellomessage"
            />

    </LinearLayout>

    <!-- Quantity Controls -->
    <TextView
        android:id="@+id/product_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sizename"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btncart"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/btn_bg"
        android:text="Add to Cart"
        android:textSize="10sp"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/addcart"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_size"
        app:layout_constraintVertical_bias="0.9"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
